objects/FieloCRUD__ListViewAction__c.object
<CustomObject>
    <fields>
        <fullName>FieloCRUD__ActionMenu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Menu that handles the Action through the list view or related list. Commonly is a menu that contains a CRUD component but it can also be a custom page.</inlineHelpText>
        <label>Action Menu</label>
        <referenceTo>FieloEE__Menu__c</referenceTo>
        <relationshipLabel>List View Actions</relationshipLabel>
        <relationshipName>ListViewActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ActionMode__c</fullName>
        <formula>LOWER(RPAD(TEXT(FieloCRUD__ActionParameter__c), 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ActionParameter__c</fullName>
        <label>Action Parameter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCRUD__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Menu Action</fullName>
                    <default>true</default>
                    <label>Menu Action</label>
                </value>
                <value>
                    <fullName>JS Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCRUD__ConditionField__c</fullName>
        <inlineHelpText>Define the field API name that will determine if the action appears. Ex.: (Edit Action) If you don&apos;t want users to edit invoice records that are already approved, complete this field with Approved__c for instance.</inlineHelpText>
        <label>Condition Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ConditionValue__c</fullName>
        <inlineHelpText>Complete with the value that the field defined on &quot;Condition Field&quot; should take in order to display the edit action. Ex.: If you don&apos;t want users to edit invoice records that are already approved, complete this field with FALSE.</inlineHelpText>
        <label>Condition Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__Condition__c</fullName>
        <formula>IF(
AND(NOT(ISBLANK(FieloCRUD__ConditionField__c)), NOT(ISBLANK(FieloCRUD__ConditionValue__c))),
FieloCRUD__ConditionField__c + &quot; = &quot; +  FieloCRUD__ConditionValue__c,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__JSCode__c</fullName>
        <inlineHelpText>Define javascript functions that will be consumed by the “JS OnClick” button.</inlineHelpText>
        <label>JS Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__JSOnClick__c</fullName>
        <defaultValue>&apos;var recordId = $(this).data(&quot;id&quot;);&apos;+
&apos;alert(recordId);&apos;</defaultValue>
        <inlineHelpText>Defines the javascript code that will be executed when clicking the button. If further code is needed, define functions on “JS Code” field that can be consumed by this field.</inlineHelpText>
        <label>JS OnClick</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__LabelSiteName__c</fullName>
        <label>Label Site Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__LinkField__c</fullName>
        <inlineHelpText>Define the field API name that will work as a link redirecting the user to see the detail of a record. If this field is null, then the user won&apos;t be able to see the record detail.</inlineHelpText>
        <label>Link Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ListView__c</fullName>
        <label>List View</label>
        <referenceTo>FieloCRUD__ListView__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>ListViewActions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__MenuRedirectAfterAction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If you selected a &quot;Action Menu&quot; when you click the action, the list view add the param &quot;retOnSave&quot;. If you define a Menu, that parameter is completed with the Menu you selected, if this field is null that parameter is completed with the current List View</inlineHelpText>
        <label>Menu Redirect After Action</label>
        <referenceTo>FieloEE__Menu__c</referenceTo>
        <relationshipLabel>List View Actions (Menu Redirect After Action)</relationshipLabel>
        <relationshipName>ListViewMenuRedirectAfterAction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>List View Action</label>
    <nameField>
        <label>List View Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List View Actions</pluralLabel>
    <recordTypes>
        <fullName>FieloCRUD__FieldAction</fullName>
        <active>true</active>
        <label>Field Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCRUD__GlobalAction</fullName>
        <active>true</active>
        <label>Global Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCRUD__RecordRowAction</fullName>
        <active>true</active>
        <label>Record Row Action</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>